# research-assistant-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.override.yml.example  docker-compose.yml
.claude/: launch.json
.github/: pull_request_template.md
.github/workflows/: backend-ci.yml  claude-review.yml  frontend-ci.yml
.husky/: pre-push
backend/: .env.example  .gitignore  CLAUDE.md  pyproject.toml
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: 0001_create_documents_and_citations_tables.py  0002_add_user_id_to_documents.py
backend/app/: config.py  main.py
backend/app/api/: chat.py  documents.py  sources.py  summarize.py  usage.py
backend/app/core/: dependencies.py  exceptions.py  rate_limiter.py
backend/app/llm/: anthropic_provider.py  base.py  factory.py  fallback_provider.py  gemini_provider.py  groq_provider.py  openai_provider.py  usage.py
backend/app/middleware/: user_id.py
backend/app/models/: __init__.py  citation.py  document.py
backend/app/repositories/: citation_repository.py  document_repository.py
backend/app/schemas/: chat.py  document.py  source.py  summarization.py
backend/app/services/: chat_service.py  document_service.py  source_service.py  summarization_service.py
backend/tests/: test_chat.py  test_documents.py  test_fallback_provider.py  test_summarization.py
docker/: backend.Dockerfile  frontend.Dockerfile
frontend/: .gitignore  CLAUDE.md  package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: Providers.tsx
frontend/src/types/: chat.ts  (+3 more)
(+22 files in other folders)
